# sdl3-bgfx-imgui-examples

./: .clang-format  CMakeLists.txt  README.md
include/: file-ops.h
scripts/: build.sh  compile_shaders_win.sh  run.sh
shader/: f_simple.sc
src/: main.cpp
